--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
-asgiref==3.5.2
-certifi==2022.12.7
-charset-normalizer==3.1.0
-Django==4.1.1
-gunicorn==20.1.0
-idna==3.4
-requests==2.28.2
-sqlparse==0.4.2
-tzdata==2022.2
-urllib3==1.26.15
-whitenoise==6.2.0
-thefuzz==0.19.0
-langdetect==1.0.9
-nltk ==3.8.1
-aiohttp ==3.8.4
+asgiref >= 3.5.2
+certifi >= 2022.12.7
+charset-normalizer >= 3.1.0
+Django >= 4.1.1
+gunicorn >= 20.1.0
+idna >= 3.4
+requests >= 2.28.2
+sqlparse >= 0.4.2
+tzdata >= 2022.2
+urllib3 >= 1.26.15
+whitenoise >= 6.2.0
+thefuzz >= 0.19.0
+langdetect >= 1.0.9
+nltk  >= 3.8.1
+aiohttp  >= 3.8.4
+tensorflow
+deepface  == 0.0.79
