--- a/requirements.txt
+++ b/requirements.txt
@@ -120,7 +120,7 @@ srsly==2.4.6
 tensorboard==2.13.0
 tensorboard-data-server==0.7.0
 tensorflow==2.13.0rc1
-tensorflow-estimator==2.13.0rc0
+tensorflow-estimator==2.13.0
 tensorflow-macos==2.13.0rc1
 termcolor==2.3.0
 thefuzz==0.19.0
