--- a/requirements.txt
+++ b/requirements.txt
@@ -1,138 +1,139 @@
-# asgiref >= 3.5.2
-# certifi >= 2022.12.7
-# charset-normalizer >= 3.1.0
-# Django >= 4.1.1
-# gunicorn >= 20.1.0
-# idna >= 3.4
-# requests >= 2.28.2
-# sqlparse >= 0.4.2
-# tzdata >= 2022.2
-# urllib3 >= 1.26.15
-# whitenoise >= 6.2.0
-# thefuzz >= 0.19.0
-# langdetect >= 1.0.9
-# nltk  >= 3.8.1
-# aiohttp  >= 3.8.4
-# tensorflow
-# deepface  == 0.0.79
-
-absl-py==1.4.0
-aiohttp==3.8.4
-aiosignal==1.3.1
-asgiref==3.5.2
-astunparse==1.6.3
-async-timeout==4.0.2
-attrs==23.1.0
-autopep8==2.0.2
-beautifulsoup4==4.12.2
-blinker==1.6.2
-blis==0.7.9
-cachetools==5.3.1
-catalogue==2.0.8
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==3.1.0
-click==8.1.3
-confection==0.0.4
-cymem==2.0.7
-decorator==4.4.2
-deepface==0.0.79
-distlib==0.3.6
-Django==4.1.1
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl
-et-xmlfile==1.1.0
-ffmpeg==1.4
-ffmpeg-python==0.2.0
-filelock==3.9.0
-fire==0.5.0
-Flask==2.3.2
-flatbuffers==23.5.26
-frozenlist==1.3.3
-future==0.18.3
-gast==0.4.0
-gdown==4.7.1
-google-auth==2.19.1
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-greenlet==2.0.1
-grpcio==1.54.2
-gunicorn==20.1.0
-h5py==3.8.0
-idna==3.4
-imageio==2.25.0
-imageio-ffmpeg==0.4.8
-itsdangerous==2.1.2
-Jinja2==3.1.2
-joblib==1.2.0
-keras==2.13.1rc0
-langcodes==3.3.0
-langdetect==1.0.9
-libclang==16.0.0
-Markdown==3.4.3
-MarkupSafe==2.1.2
-moviepy==1.0.3
-mtcnn==0.1.1
-multidict==6.0.4
-murmurhash==1.0.9
-nltk==3.8.1
-numpy==1.24.2
-oauthlib==3.2.2
+asgiref >= 3.5.2
+certifi >= 2022.12.7
+charset-normalizer >= 3.1.0
+Django >= 4.1.1
+gunicorn >= 20.1.0
+idna >= 3.4
+requests >= 2.28.2
+sqlparse >= 0.4.2
+tzdata >= 2022.2
+urllib3 >= 1.26.15
+whitenoise >= 6.2.0
+thefuzz >= 0.19.0
+langdetect >= 1.0.9
+nltk  >= 3.8.1
+aiohttp  >= 3.8.4
+tensorflow
+deepface  == 0.0.79
 opencv-python==4.7.0.68
-openpyxl==3.1.1
-opt-einsum==3.3.0
-packaging==23.0
-pafy==0.5.5
-pandas==1.5.3
-pathy==0.10.1
-Pillow==9.4.0
-platformdirs==3.1.1
-playwright==1.30.0
-pocketsphinx==5.0.0
-preshed==3.0.8
-proglog==0.1.10
-protobuf==4.23.2
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pycodestyle==2.10.0
-pycparser==2.21
-pydantic==1.10.7
-pydub==0.25.1
-pyee==9.0.4
-PySocks==1.7.1
-python-dateutil==2.8.2
-pytz==2022.7.1
-regex==2023.3.23
-requests==2.28.2
-requests-oauthlib==1.3.1
-retina-face==0.0.13
-rsa==4.9
-six==1.16.0
-smart-open==6.3.0
-sounddevice==0.4.5
-soupsieve==2.4.1
-spacy==3.5.1
-spacy-download==1.1.0
-spacy-legacy==3.0.12
-spacy-loggers==1.0.4
-SpeechRecognition==3.9.0
-sqlparse==0.4.2
-srsly==2.4.6
-tensorboard==2.13.0
-tensorboard-data-server==0.7.0
-tensorflow==2.13.0rc1
-tensorflow-estimator==2.13.0rc0
-tensorflow-macos==2.13.0rc1
-termcolor==2.3.0
-thefuzz==0.19.0
-thinc==8.1.9
-tqdm==4.64.1
-typer==0.7.0
-typing_extensions==4.5.0
-tzdata==2022.2
-urllib3==1.26.15
-virtualenv==20.20.0
-wasabi==1.1.1
-Werkzeug==2.3.6
-whitenoise==6.2.0
-wrapt==1.15.0
-yarl==1.9.2
+
+# absl-py==1.4.0
+# aiohttp==3.8.4
+# aiosignal==1.3.1
+# asgiref==3.5.2
+# astunparse==1.6.3
+# async-timeout==4.0.2
+# attrs==23.1.0
+# autopep8==2.0.2
+# beautifulsoup4==4.12.2
+# blinker==1.6.2
+# blis==0.7.9
+# cachetools==5.3.1
+# catalogue==2.0.8
+# certifi==2022.12.7
+# cffi==1.15.1
+# charset-normalizer==3.1.0
+# click==8.1.3
+# confection==0.0.4
+# cymem==2.0.7
+# decorator==4.4.2
+# deepface==0.0.79
+# distlib==0.3.6
+# Django==4.1.1
+# en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl
+# et-xmlfile==1.1.0
+# ffmpeg==1.4
+# ffmpeg-python==0.2.0
+# filelock==3.9.0
+# fire==0.5.0
+# Flask==2.3.2
+# flatbuffers==23.5.26
+# frozenlist==1.3.3
+# future==0.18.3
+# gast==0.4.0
+# gdown==4.7.1
+# google-auth==2.19.1
+# google-auth-oauthlib==1.0.0
+# google-pasta==0.2.0
+# greenlet==2.0.1
+# grpcio==1.54.2
+# gunicorn==20.1.0
+# h5py==3.8.0
+# idna==3.4
+# imageio==2.25.0
+# imageio-ffmpeg==0.4.8
+# itsdangerous==2.1.2
+# Jinja2==3.1.2
+# joblib==1.2.0
+# keras==2.13.1rc0
+# langcodes==3.3.0
+# langdetect==1.0.9
+# libclang==16.0.0
+# Markdown==3.4.3
+# MarkupSafe==2.1.2
+# moviepy==1.0.3
+# mtcnn==0.1.1
+# multidict==6.0.4
+# murmurhash==1.0.9
+# nltk==3.8.1
+# numpy==1.24.2
+# oauthlib==3.2.2
+# opencv-python==4.7.0.68
+# openpyxl==3.1.1
+# opt-einsum==3.3.0
+# packaging==23.0
+# pafy==0.5.5
+# pandas==1.5.3
+# pathy==0.10.1
+# Pillow==9.4.0
+# platformdirs==3.1.1
+# playwright==1.30.0
+# pocketsphinx==5.0.0
+# preshed==3.0.8
+# proglog==0.1.10
+# protobuf==4.23.2
+# pyasn1==0.5.0
+# pyasn1-modules==0.3.0
+# pycodestyle==2.10.0
+# pycparser==2.21
+# pydantic==1.10.7
+# pydub==0.25.1
+# pyee==9.0.4
+# PySocks==1.7.1
+# python-dateutil==2.8.2
+# pytz==2022.7.1
+# regex==2023.3.23
+# requests==2.28.2
+# requests-oauthlib==1.3.1
+# retina-face==0.0.13
+# rsa==4.9
+# six==1.16.0
+# smart-open==6.3.0
+# sounddevice==0.4.5
+# soupsieve==2.4.1
+# spacy==3.5.1
+# spacy-download==1.1.0
+# spacy-legacy==3.0.12
+# spacy-loggers==1.0.4
+# SpeechRecognition==3.9.0
+# sqlparse==0.4.2
+# srsly==2.4.6
+# tensorboard==2.13.0
+# tensorboard-data-server==0.7.0
+# tensorflow==2.13.0rc1
+# tensorflow-estimator==2.13.0rc0
+# tensorflow-macos==2.13.0rc1
+# termcolor==2.3.0
+# thefuzz==0.19.0
+# thinc==8.1.9
+# tqdm==4.64.1
+# typer==0.7.0
+# typing_extensions==4.5.0
+# tzdata==2022.2
+# urllib3==1.26.15
+# virtualenv==20.20.0
+# wasabi==1.1.1
+# Werkzeug==2.3.6
+# whitenoise==6.2.0
+# wrapt==1.15.0
+# yarl==1.9.2
